--- a/public/scss/2-base/_buttons.scss
+++ b/public/scss/2-base/_buttons.scss
@@ -63,4 +63,10 @@ input[type="reset"] {
             content: none;
         }
     }
+    &:focus,
+    &:active {
+        outline: none;
+        border: none;
+        box-shadow: none;
+    }
 }
