--- a/public/scss/2-base/_typography.scss
+++ b/public/scss/2-base/_typography.scss
@@ -258,3 +258,8 @@ $font-weights: (100, 200, 300, 400, 500, 600, 700, 800, 900);
 .text-oxford {
     color: $ac-oxford;
 }
+
+.is-16 {
+    height: 16px;
+    width: 16px;
+}
