--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -36,6 +36,7 @@ License URI: LICENSE
 @import '1-helpers/mixins';
 @import '2-base/resets';
 @import '2-base/body';
+@import '2-base/links';
 @import '2-base/buttons';
 @import '2-base/typography';
 @import '3-components/navbar';
